Fixed Info box image stretch

--- a/assets/front-end/css/view/info-box.css
+++ b/assets/front-end/css/view/info-box.css
@@ -220,6 +220,7 @@
 }
 /*--- Imgae Circle On Top ---*/
 .eael-infobox .infobox-icon img {
+  display: inline-block;
   -webkit-transition: all 300ms ease-in-out 0s;
   -o-transition: all 300ms ease-in-out 0s;
   transition: all 300ms ease-in-out 0s;
